src-tauri/error.txt
    Checking tauri-appaudio-switcher v0.1.0 (C:\閾ｪ菴懊・繝ｭ繧ｸ繧ｧ繧ｯ繝・髻ｳ螢ｰ蜃ｺ蜉帛・繧頑崛縺・src-tauri)
warning: unused import: `windows::Win32::UI::Shell::PropertiesSystem`
  --> src\audio_manager.rs:11:5
   |
11 | use windows::Win32::UI::Shell::PropertiesSystem::*;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0382]: use of moved value: `public_dir`
   --> src\steam_manager.rs:127:40
    |
125 |     if let Ok(public_dir) = std::env::var("PUBLIC") {
    |               ---------- move occurs because `public_dir` has type `std::string::String`, which does not implement the `Copy` trait
126 |         search_dirs.push(PathBuf::from(public_dir).join("Desktop"));
    |                                        ---------- value moved here
127 |         search_dirs.push(PathBuf::from(public_dir).join("繝・せ繧ｯ繝医ャ繝・));
    |                                        ^^^^^^^^^^ value used here after move
    |
help: consider cloning the value if the performance cost is acceptable
    |
126 |         search_dirs.push(PathBuf::from(public_dir.clone()).join("Desktop"));
    |                                                  ++++++++

For more information about this error, try `rustc --explain E0382`.
warning: `tauri-appaudio-switcher` (bin "tauri-appaudio-switcher") generated 1 warning
error: could not compile `tauri-appaudio-switcher` (bin "tauri-appaudio-switcher") due to 1 previous error; 1 warning emitted
